Fixed spacing with Profile Dropdown menu

--- a/src/components/AddFacility/AddFacility.css
+++ b/src/components/AddFacility/AddFacility.css
@@ -48,7 +48,7 @@
 p {
   font-size: 16px;
   font-weight: medium;
-  margin: 10px 0px 10px 0px;
+  /* margin: 10px 0px 10px 0px; */
 }
 img {
   width: 48px;
