--- a/src/components/ProfileDropdown/ProfileDropdown.module.css
+++ b/src/components/ProfileDropdown/ProfileDropdown.module.css
@@ -91,5 +91,5 @@
 }
 
 p {
-  margin: none;
+  margin: 0;
 }
